# lok-r1

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  autorm.sh  config.h.in  configure  configure.ac
.github/workflows/: ci.yml
lib/: stdio.lok  stdtype.lok
src/: asmnodes.hpp  astnode.hpp  clok.hpp  headergen.cpp  main.cpp  nodes.cpp  parse.cpp  preasm.cpp  token.cpp  token.hpp  tokens.c  tokens.h  tokens.l  trees.cpp  trees.hpp  yydef.hpp
test/: exprtest.lok  fulltest.lok  test1.lok
